re PR target/54142 (ppc64 build failure - Unrecognized opcode: `sldi' (and `srdi`))

2012-08-15  Segher Boessenkool  <segher@kernel.crashing.org>

gcc/
        PR target/54142
        * config/rs6000/driver-rs6000.c (asm_names): Use %(asm_default)
        instead of -mcom.
        * config/rs6000/rs6000.h (ASM_CPU_SPEC): Ditto.

From-SVN: r190427